syntax = "proto3";

package nibiru.vpool.v1;

option go_package = "github.com/NibiruChain/nibiru/x/vpool/types";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "common/common.proto";

enum Direction {
  DIRECTION_UNSPECIFIED = 0;
  ADD_TO_POOL = 1;
  REMOVE_FROM_POOL = 2;
}

// Enumerates different options of calculating twap.
enum TwapCalcOption {
  TWAP_CALC_OPTION_UNSPECIFIED = 0;

  // Spot price from quote asset reserve / base asset reserve
  SPOT = 1;

  // Swapping with quote assets, output denominated in base assets
  QUOTE_ASSET_SWAP = 2;

  // Swapping with base assets, output denominated in quote assets
  BASE_ASSET_SWAP = 3;
}

// a snapshot of the vpool's reserves at a given point in time
message ReserveSnapshot {
  string base_asset_reserve = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", 
    (gogoproto.nullable) = false];

  // quote asset is usually the margin asset, e.g. NUSD
  string quote_asset_reserve = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", 
    (gogoproto.nullable) = false];

  // milliseconds since unix epoch
  int64 timestamp_ms = 3;

  int64 block_number = 4;
}

// A virtual pool used only for price discovery of perpetual futures contracts.
// No real liquidity exists in this pool.
message Pool {
  // always BASE:QUOTE, e.g. BTC:NUSD or ETH:NUSD
  common.AssetPair pair = 1 [
    (gogoproto.nullable) = false
  ];

  // base asset is the crypto asset, e.g. BTC or ETH
  string base_asset_reserve = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", 
    (gogoproto.nullable) = false
  ];

  // quote asset is usually stablecoin, in our case NUSD
  string quote_asset_reserve = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", 
    (gogoproto.nullable) = false
  ];
    
  // ratio applied to reserves in order not to over trade
  string trade_limit_ratio = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", 
    (gogoproto.nullable) = false
  ];

  // percentage that a single open or close position can alter the reserve amounts
  string fluctuation_limit_ratio = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", 
    (gogoproto.nullable) = false
  ];

  // max_oracle_spread_ratio
  string max_oracle_spread_ratio = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", 
    (gogoproto.nullable) = false
  ];    
  
  // maintenance_margin_ratio
  string maintenance_margin_ratio = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
    ];

  // max_leverage
  string max_leverage = 8 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
    ];    
}